# UniversalSocket

./: .gitignore  README.md
client/: CMakeLists.txt  build.sh  client.c  debug.sh  run.sh
server/: CMakeLists.txt  build.sh  debug.sh  run.sh  server.c
